show, index are added

--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -1,1 +1,5 @@
-<h1>You are welcome!</h1>
+<h2>Вопросы</h2>
+
+<% @questions.each do |question| %>
+  <p><%= link_to "Вопрос #{question.id}", question_path(question) %></p>
+<% end %>
