layouts, assets pipeline, hidden

--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -1,5 +1,24 @@
-<h2>Вопрос</h2>
-<p><%= @question.body %></p>
-<p>user_id: <b><%= @question.user_id %></b></p>
+<div class="container">
+    <h2 class="title-lg mb">Вопрос <%= @question.id %></h2>
 
-<p><%= link_to "Все вопросы", questions_path %></p>
+    <p class="mb-sm"><%= @question.body %></p>
+    <p>user_id: <b><%= @question.user_id %></b></p>
+
+    <div class="mt">
+      <%= link_to fa_icon('pencil'), 
+        edit_question_path(@question), 
+        title: 'Изменить вопрос' %>
+        
+      <% unless @question.hidden? %>
+        <%= button_to fa_icon('eye-slash'), 
+          hide_question_path(@question),
+          method: :patch, title: 'Скрыть вопрос' %>
+      <% end %>
+
+      <%= button_to fa_icon('trash-o'), 
+        question_path(@question), 
+        method: :delete, title: 'Удалить вопрос' %>
+    </div>
+
+    <p class="mt"><%= link_to "Все вопросы", questions_path %></p>
+</div>
