--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -1,5 +1,12 @@
-<h2>Вопросы</h2>
+<div class="container">
+<h2 class="title-lg mb">Вопросы</h2>
 
 <% @questions.each do |question| %>
-  <p><%= link_to "Вопрос #{question.id}", question_path(question) %></p>
+  <% hidden_class = "text-hidden" if question.hidden? %>
+  <p class="mb-sm <%= hidden_class %>"><%= link_to "Вопрос #{question.id}", question_path(question) %></p>
 <% end %>
+
+<p class="mt">
+  <%= link_to "Создать новый вопрос", new_question_path, class: 'button button-main' %>
+</p>
+</div>
