partials, sessions,User model are added

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -6,7 +6,10 @@
  *= require button
  *= require form
  *= require layout
+ *= require message
+ 
+ *= require question
  *= require spacing
  *= require text
-  */
+ */
   
