--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -1,24 +1,7 @@
 <div class="container">
     <h2 class="title-lg mb">Вопрос <%= @question.id %></h2>
 
-    <p class="mb-sm"><%= @question.body %></p>
-    <p>user_id: <b><%= @question.user_id %></b></p>
-
-    <div class="mt">
-      <%= link_to fa_icon('pencil'), 
-        edit_question_path(@question), 
-        title: 'Изменить вопрос' %>
-        
-      <% unless @question.hidden? %>
-        <%= button_to fa_icon('eye-slash'), 
-          hide_question_path(@question),
-          method: :patch, title: 'Скрыть вопрос' %>
-      <% end %>
-
-      <%= button_to fa_icon('trash-o'), 
-        question_path(@question), 
-        method: :delete, title: 'Удалить вопрос' %>
-    </div>
+    <%= render "question", question: @question %>
 
     <p class="mt"><%= link_to "Все вопросы", questions_path %></p>
 </div>
