--- a/app/views/questions/_form.html.erb
+++ b/app/views/questions/_form.html.erb
@@ -1,4 +1,6 @@
 <%= form_with model: question, data: {turbo: false} do |form| %>
+  <%= form.hidden_field :user_id%>
+
   <% if @question.errors.any? %>
     <div class="mt">
       <% @question.errors.full_messages.each do |message| %>
@@ -9,10 +11,12 @@
 
   <p><%= form.label :body, "Текст вопроса" %></p>
   <p><%= form.text_area :body, rows: 5, class: "form-text-area" %></p>
-
-  <p class="mt"><%= form.label :user_id %></p>
-  <p><%= form.text_field :user_id, class: "form-text-field" %></p>
-
+  
+  <% if question.persisted? %>
+    <p class="mt"><%= form.label :answer, "Ответ" %></p>
+    <p><%= form.text_area :answer, rows: 5, class: "form-text-area" %></p>
+  <% end %>
+  
   <p class="mt">
     <%= form.submit "Сохранить", class: "button button-main" %>
     или <%= link_to "Вернуться", :back %>
