--- a/app/views/questions/new.html.erb
+++ b/app/views/questions/new.html.erb
@@ -1,6 +1,8 @@
 <div class="container">
   <h2 class="title-lg mb-sm">Новый вопрос</h2>
-  <p class="mb">для <%= link_to "@#{@user.nickname}", user_path(@user) %></p>
+  <% if @user.present? %>
+    <p class="mb">для <%= link_to "@#{@user.nickname}", user_path(@user) %></p>
+  <% end %>
 
   <%= render 'form', question: @question %>
 </div>
