--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,30 +3,35 @@
 
   <% if current_user == @user %>
     <p class="mt mb-lg">
-      <%= link_to fa_icon('pencil'), edit_user_path(user: @user) %>
+      <%= link_to fa_icon('pencil'), edit_user_path(@user) %>
     </p>
+   
+    <p class="text-bold mt mb-lg">@<%= @user.nickname %></p>
   <% end %>
-
-  <p class="text-bold mt mb-lg">@<%= @user.nickname %></p>
 </div>
 
-<div class="container">
-  <%= link_to "Спроси меня", new_question_path(user_id: @user.id),
-   class: 'button button-yellow'  %>
-  <p class="mt">
-    <%= render "questions/form", question: @question %>
-  </p>
-</div>
-
-<div class="container mt-sm">
-  <h2 class="title-lg">
-    <%= @questions.count %>
-    <%= inclination(@questions.count, "вопрос", "вопроса", "вопросов") %>
-  </h2>
-</div>
-
-<% @questions.each do |question| %>
-  <div class="mt-sm container">
-    <%= render question %>
+<% if @questions.any? %>
+  <div class="container">
+    <%= link_to "Спроси меня", new_question_path(user_id: @user.id),
+     class: 'button button-yellow'  %>
+      
+    <p class="mt">
+      <%= render "questions/form", question: @question %>
+    </p>
   </div>
+
+  <div class="container mt-sm">
+    <h2 class="title-lg">
+      <%= @questions.count %>
+      <%= inclination(@questions.count, "вопрос", "вопроса", "вопросов") %>
+    </h2>
+  </div>
+
+  <% @questions.each do |question| %>
+    <div class="mt-sm container">
+      <%= render question %>
+    </div>
+  <% end %>
+<% else %>
+ <%= render "questions/no_questions", user: @user %>
 <% end %>
