gravatar is added, views are modified

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -7,10 +7,12 @@
  *= require form
  *= require layout
  *= require message
+ *= require utils
  
  *= require question
  *= require spacing
  *= require text
  *= require user
+ *= require users
 
  */
