--- a/app/views/questions/_no_questions.html.erb
+++ b/app/views/questions/_no_questions.html.erb
@@ -7,6 +7,6 @@
     <%= fa_stacked_icon 'question', base: 'circle-o' %>
   </div>
 
-  <%= link_to "Дай, спрошу!", new_question_path(user_id: user),
+  <%= link_to "Дай, спрошу!", new_question_path(user_nickname: @user),
     class: 'button button-main' %>
 </div>
