--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -22,7 +22,7 @@
   <div class="mt-sm container">
     <p class="mb text-sm text-grey">
     Вопрос <%= link_to "##{question.id}", question_path(question) %>
-    для юзера <%= link_to "@#{@question.user.nickname}", user_path(@question.user) %>
+    для юзера <%= link_to "@#{question.user.nickname}", user_path(question.user) %>
     </p>
     <%= render question %> 
   </div>
