nickname to url modified

--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -41,7 +41,7 @@
   </div>
 
   <div class="mt-lg">
-    <%= button_to "Удалить профиль", user_path(@user),
+    <%= button_to "Удалить профиль", user_path(@user.nickname),
       method: :delete,
       form: {data: {turbo_confirm: "Вы точно хотите удалить свой профиль?"}},
       class: 'text-red text-sm' %>
