--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,10 +16,10 @@
         <p class="title-sm text-bold"><%= link_to "Ask me!", root_path %></p>
         <div>
           <% if current_user %>
-            <%= link_to display_nickname(current_user), user_path(current_user), class: 'mr-sm' %>
+            <%= link_to display_nickname(current_user.nickname), user_path(current_user.nickname), class: 'mr-sm' %>
             <%= button_to "Выйти", session_path, method: :delete %>
           <% elsif current_user.present? %>
-            <%= link_to display_nickname(current_user), user_path(current_user), class: 'mr-sm' %>
+            <%= link_to display_nickname(current_user.nickname), user_path(current_user.nickname), class: 'mr-sm' %>
             <%= button_to "Выйти", session_path, method: :delete %>
           <% else %>
             <%= link_to "Регистрация", new_user_path, class: 'button button-yellow mr-sm' %>
