--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,7 +7,7 @@
   
   <% if current_user == @user %>
     <p class="mt mb-lg">
-      <%= link_to fa_icon('pencil'), edit_user_path(@user) %>
+      <%= link_to fa_icon('pencil'), edit_user_path(@user.nickname) %>
     </p>
    
     <p class="text-bold mt mb-lg">@<%= @user.nickname %></p>
@@ -16,7 +16,7 @@
 
 <% if @questions.any? %>
   <div class="container">
-    <%= link_to "Спроси меня", new_question_path(user_nickname: @user),
+    <%= link_to "Спроси меня", new_question_path(user_id: @user.id),
      class: 'button button-yellow'  %>
       
     <p class="mt">
